--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <img class="logo" src="img/logo.png" alt="logo">
         </div>
     </header>
-    <main >
 
-        <div class="main-container">
-            ciao Paolo!!!
-        </div>
-
+    <main>
+       <div class="main-container">
+        ciao
+    </div>
+       
+       
     </main>
-
 
 
 
