--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
         <div class="header-container" >
             <img class="logo" src="img/logo.png" alt="logo">
+            <span class="toboo" >Toboolist</span>
         </div>
     </header>
 
     <main>
        <div class="main-container">
-        ciao
-    </div>
+
+        </div>
        
        
     </main>
