--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
         </div>
     </header>
 
+    <!-- MAIN -->
     <main>
-       <div class="main-container">
 
+        <div class="main-container">
+            <button class="btn btn-blu">Add Task</button>
+            <button class="btn btn-white">Add Selection</button>
         </div>
-       
-       
-    </main>
 
+    </main>
 
 
 
