--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
         <div class="main-container">
             <button class="btn btn-blu">Add Task</button>
-            <button class="btn btn-white">Add Selection</button>
-        </div>
+            <button class="btn btn-white">Add Section</button>
+        </div> 
+        
+        <hr>
 
     </main>
 
