--- a/index.html
+++ b/index.html
@@ -26,6 +26,34 @@
         
         <hr>
 
+        <div class="main-container">
+
+            <ul>
+                <li class="menu">&#9662 New Task
+                    <ul>
+                        <li> <span>&#128504</span>Quarterly Newsletter</li>
+                    </ul>
+                </li>
+                <li class="menu">&#9662 New Task
+                    <ul>
+                        <li> <span>&#128504</span>Quarterly Newsletter</li>
+                        <li> <span>&#128504</span>Quarterly Newsletter</li>
+                        <li> <div>&#x2717</div> Lorem ipsum dolor</li>
+                        <li> <span>&#128504</span>Quarterly Newsletter</li>
+                    </ul>
+                </li>
+                <li class="menu">&#9662 New Task
+                    <ul>
+                        <li> <div>&#x2717</div> Lorem ipsum dolor</li>
+                        <li> <span>&#128504</span>Quarterly Newsletter</li>
+                        <li> <span>&#128504</span>Quarterly Newsletter</li>
+                        <li> <span>&#128504</span>Quarterly Newsletter</li>
+                    </ul>
+                </li>
+
+            </ul>
+
+        </div>
     </main>
 
 
