--- a/index.html
+++ b/index.html
@@ -31,28 +31,45 @@
             <ul>
                 <li class="menu">&#9662 New Task
                     <ul>
-                        <li> <span>&#128504</span>Quarterly Newsletter</li>
+                        <li> <div class="green">&#128504</div> Quarterly Newsletter
+                            <div class="categories" >Editorial</div>
+                        </li>
                     </ul>
                 </li>
                 <li class="menu">&#9662 New Task
                     <ul>
-                        <li> <span>&#128504</span>Quarterly Newsletter</li>
-                        <li> <span>&#128504</span>Quarterly Newsletter</li>
-                        <li> <div>&#x2717</div> Lorem ipsum dolor</li>
-                        <li> <span>&#128504</span>Quarterly Newsletter</li>
+                        <li> <div class="green">&#128504</div> Quarterly Newsletter
+                            <div class="categories">Editorial</div>
+                        </li>
+                        <li> <div class="green">&#128504</div> Quarterly Newsletter 
+                            <div class="categories" >Editorial</div>
+                        </li>
+                        <li> <div class="red">&#x2717</div> Lorem ipsum dolor
+                            <div class="categories" >Editorial</div>
+                        </li>
+                        <li> <div class="green">&#128504</div> Quarterly Newsletter
+                            <div class="categories" >Editorial</div>
+                        </li>
                     </ul>
                 </li>
                 <li class="menu">&#9662 New Task
                     <ul>
-                        <li> <div>&#x2717</div> Lorem ipsum dolor</li>
-                        <li> <span>&#128504</span>Quarterly Newsletter</li>
-                        <li> <span>&#128504</span>Quarterly Newsletter</li>
-                        <li> <span>&#128504</span>Quarterly Newsletter</li>
+                        <li> <div class="red">&#x2717</div> Lorem ipsum dolor
+                            <div class="categories" >Editorial</div>
+                        </li>
+                        <li> <div class="green">&#128504</div> Quarterly Newsletter
+                            <div class="categories" >Editorial</div>
+                        </li>
+                        <li> <div class="green">&#128504</div> Quarterly Newsletter
+                            <div class="categories" >Editorial</div>
+                        </li>
+                        <li> <div class="green">&#128504</div> Quarterly Newsletter
+                            <div class="categories" >Editorial</div>
+                        </li>
                     </ul>
                 </li>
 
             </ul>
-
         </div>
     </main>
 
