--- a/index.html
+++ b/index.html
@@ -29,41 +29,40 @@
         <div class="main-container">
 
             <ul>
-                <li class="menu">&#9662 New Task
+                <li class="menu">&#9662; New Task
                     <ul>
-                        <li> <div class="green">&#128504</div> Quarterly Newsletter
+                        <li> <div class="green">&#128504;</div> Quarterly Newsletter
                             <div class="categories" >Editorial</div>
                         </li>
                     </ul>
                 </li>
-                <li class="menu">&#9662 New Task
+                <li class="menu">&#9662; New Task
                     <ul>
-                        <li> <div class="green">&#128504</div> Quarterly Newsletter
+                        <li> <div class="green">&#128504;</div> Quarterly Newsletter
                             <div class="categories">Editorial</div>
                         </li>
-                        <li> <div class="green">&#128504</div> Quarterly Newsletter 
+                        <li> <div class="green">&#128504;</div> Quarterly Newsletter 
+                            <div class="categories cat-violet" >Editorial</div>
+                        </li>
+                        <li> <div class="red">&#x2717;</div> Lorem ipsum dolor
                             <div class="categories" >Editorial</div>
                         </li>
-                        <li> <div class="red">&#x2717</div> Lorem ipsum dolor
-                            <div class="categories" >Editorial</div>
-                        </li>
-                        <li> <div class="green">&#128504</div> Quarterly Newsletter
-                            <div class="categories" >Editorial</div>
+                        <li> <div class="green">&#128504;</div> Quarterly Newsletter
+                            <div class="categories cat-orange" >Editorial</div>
                         </li>
                     </ul>
                 </li>
-                <li class="menu">&#9662 New Task
+                <li class="menu">&#9662; New Task
                     <ul>
-                        <li> <div class="red">&#x2717</div> Lorem ipsum dolor
-                            <div class="categories" >Editorial</div>
+                        <li> <div class="red">&#x2717;</div> Lorem ipsum dolor
                         </li>
-                        <li> <div class="green">&#128504</div> Quarterly Newsletter
-                            <div class="categories" >Editorial</div>
+                        <li> <div class="green">&#128504;</div> Quarterly Newsletter
+                            <div class="categories cat-pink" >Editorial</div>
                         </li>
-                        <li> <div class="green">&#128504</div> Quarterly Newsletter
-                            <div class="categories" >Editorial</div>
+                        <li> <div class="green">&#128504;</div> Quarterly Newsletter
+                            <div class="categories cat-green" >Editorial</div>
                         </li>
-                        <li> <div class="green">&#128504</div> Quarterly Newsletter
+                        <li> <div class="green">&#128504;</div> Quarterly Newsletter
                             <div class="categories" >Editorial</div>
                         </li>
                     </ul>
@@ -72,9 +71,5 @@
             </ul>
         </div>
     </main>
-
-
-
-
 </body>
 </html>
